--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,8 +42,8 @@
           {% if site.blog_name %}
           <!-- Blog -->
           <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-            <!-- <a class="nav-link" href="{{ '/blog/' | relative_url }}"> -->
-            <a class="nav-link" href="https://priyalaggarwal.wordpress.com">
+            <a class="nav-link" href="{{ '/blog/' | relative_url }}">
+            <!-- <a class="nav-link" href="https://priyalaggarwal.wordpress.com"> -->
               blog
               {% if page.title == "blog" %}
               <span class="sr-only">(current)</span>
