--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,25 @@ layout: default
     {{ content }}
   </article>
 
+  <div id="disqus_thread"></div>
+
+  <script>
+    
+    var disqus_config = function () {
+    this.page.url = "https://priyalaggarwal.github.io/";  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = "startup-vs-corporate"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-priyalaggarwal-github-io.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+  <!-- 
   {% if site.disqus_shortname and page.comments %}
     <div id="disqus_thread"></div>
     <script type="text/javascript">
@@ -32,6 +51,6 @@ layout: default
       })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  {% endif %}
+  {% endif %} -->
 
 </div>
